--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
